# small-gen

./: Cargo.toml  README.md
benchmark/: Cargo.toml
src/: lib.rs
tests/: tests.rs
