[package]
name = "small-gen"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[workspace]
members = [ "benchmark" ]

[dependencies]
lazy_static = "1.5.0"
rayon = { version = "1.5.3", optional = true }

[features]
rayon = [ "dep:rayon" ]
